<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainCalculatorFragment"
        android:icon="@drawable/item_calculator"
        android:title="@string/nav_calculator" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/inventory2_item"
        android:title="@string/nav_inventory" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/item_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_battle"
        android:icon="@drawable/item_battle"
        android:title="@string/nav_battle" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/item_profile"
        android:title="@string/nav_profile" />

</menu>